// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderMenu in desktop view with experimental features disabled renders the header menu view without experimental features 1`] = `
.c4 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
}

.c5 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.01875rem;
  -moz-letter-spacing: 0.01875rem;
  -ms-letter-spacing: 0.01875rem;
  letter-spacing: 0.01875rem;
  font-weight: normal;
  color: #000;
  white-space: break-spaces;
}

.c6 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
  color: #6c00bf;
  border: 1px solid #6c00bf;
  height: 40px;
  border-radius: 6px;
  min-width: 80px;
  text-transform: none;
  white-space: nowrap;
  padding: 12px 16px;
}

.c6.Mui-disabled {
  color: #6c00bf;
  border: 1px solid #6c00bf;
  opacity: 0.2;
}

.c6 .MuiButton-iconSizeMedium *:first-child {
  font-size: 0.875rem;
}

.c7 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
  background-color: #6c00bf;
  color: #fff;
  height: 40px;
  border-radius: 6px;
  min-width: 80px;
  text-transform: none;
  white-space: break-space;
  padding: 12px 16px;
}

.c7:hover {
  background-color: #6c00bf;
  color: #fff;
}

.c7.Mui-disabled {
  background-color: #6c00bf;
  color: #fff;
  opacity: 0.2;
}

.c7.Mui-disabled:hover {
  background-color: #6c00bf;
  color: #fff;
}

.c7 .MuiButton-iconSizeMedium *:first-child {
  font-size: 0.875rem;
}

.c9 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
  color: #6c00bf;
  height: 40px;
  border-radius: 6px;
  min-width: 40px;
  width: 40px;
  text-transform: none;
  white-space: break-space;
  padding: 8px;
}

.c9.Mui-disabled {
  color: #6c00bf;
  opacity: 0.2;
}

.c9 .MuiButton-iconSizeMedium *:first-child {
  font-size: 0.875rem;
}

.c14 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
  color: #6c00bf;
  border: 1px solid #6c00bf;
  height: 40px;
  border-radius: 6px;
  min-width: 80px;
  text-transform: none;
  white-space: break-space;
  padding: 12px 16px;
}

.c14.Mui-disabled {
  color: #6c00bf;
  border: 1px solid #6c00bf;
  opacity: 0.2;
}

.c14 .MuiButton-iconSizeMedium *:first-child {
  font-size: 0.875rem;
}

.c8 {
  background-color: #eeedfc;
  width: 3px;
  height: 100%;
  border-radius: 1.5px;
}

.c10 {
  background-color: #eeedfc;
  width: 100%;
  height: 1px;
  border-radius: 1.5px;
}

.c13.MuiSwitch-root {
  width: 3.4375rem;
  height: 1.5625rem;
  position: relative;
  color: #fff;
  font-weight: bold;
  font-size: 0.75rem;
  padding: 0;
}

.c13 .MuiSwitch-switchBase.Mui-checked + .MuiSwitch-track {
  opacity: 1;
}

.c13 .MuiSwitch-switchBase {
  padding: 0.3125rem;
}

.c13 .MuiSwitch-track {
  opacity: 1;
  background-color: #fff;
  border: 2px solid #aeaabf;
  border-radius: 6.25rem;
}

.c13 .MuiSwitch-track:before,
.c13 .MuiSwitch-track:after {
  display: inline-block;
  position: absolute;
  top: 50%;
  width: 50%;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c13 .MuiSwitch-track:before {
  content: 'ON';
  opacity: 0;
  left: 0.375rem;
}

.c13 .MuiSwitch-track:after {
  content: 'OFF';
  right: 0.3125rem;
  opacity: 1;
  color: #393840;
}

.c13 .MuiSwitch-thumb {
  box-shadow: none;
  background-color: #aeaabf;
  width: 0.9375rem;
  height: 0.9375rem;
}

.c13 .Mui-checked {
  color: #fff;
}

.c13 .Mui-checked .MuiSwitch-thumb {
  background-color: #fff;
}

.c13 .Mui-checked.MuiSwitch-switchBase {
  -webkit-transform: translateX(30px);
  -ms-transform: translateX(30px);
  transform: translateX(30px);
}

.c13 .Mui-checked + .MuiSwitch-track {
  border: 0;
}

.c13 .Mui-checked + .MuiSwitch-track:before {
  opacity: 1;
}

.c13 .Mui-checked + .MuiSwitch-track:after {
  opacity: 0;
}

.c1 {
  font-size: 0.8125rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #6c00bf;
  white-space: break-spaces;
}

.c11 .MuiToolbar-root {
  border-top: 2px solid [object Object];
}

.c12 {
  margin: 2px;
}

.c0 {
  box-shadow: 1px 2px 44px 0 rgba(139,139,139,0.26);
}

.c2 {
  background-image: url('/PurpleBestInvest.svg');
  background-repeat: no-repeat;
  background-size: auto;
  height: 38px;
  width: 124px;
}

.c3 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
}

<div>
  <div
    class="MuiBox-root MuiBox-root-34"
    data-test-id="header-menu"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorInherit c0 MuiPaper-elevation0"
      data-testid="header-menu"
    >
      <div
        class="MuiToolbar-root MuiToolbar-dense MuiToolbar-gutters"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover c1 MuiLink-button MuiTypography-colorPrimary"
              >
                <div
                  class="c2"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-justify-content-xs-space-between MuiGrid-grid-xs-10"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <div
                    class="c3"
                  >
                    <h6
                      class="MuiTypography-root c4 MuiTypography-body1"
                    >
                      £101,100.00
                    </h6>
                    <p
                      class="MuiTypography-root c5 MuiTypography-body1"
                    >
                      cash ready to invest
                    </p>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text c6 MuiButton-disableElevation"
                    tabindex="0"
                    type="button"
                    wrap="nowrap"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.739 6.261c.396.396.471.964-.718 2.152L13.435 12l3.586 3.587c1.19 1.188 1.114 1.756.718 2.152-.396.396-.964.471-2.152-.718L12 13.435 8.413 17.02c-1.188 1.19-1.756 1.114-2.152.718-.396-.396-.471-.964.717-2.152L10.565 12 6.978 8.413C5.79 7.225 5.865 6.657 6.261 6.261c.396-.396.964-.471 2.152.717L12 10.565l3.587-3.587c1.188-1.188 1.756-1.113 2.152-.717z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Add cash
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text c7 MuiButton-disableElevation"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 4c.552 0 1 .343 1 2v10c0 .943 0 1.414.293 1.707C5.586 18 6.057 18 7 18h.003C7 17.868 7 17.707 7 17.5v-6c0-.465 0-.697.038-.89.158-.794.778-1.414 1.572-1.572C8.803 9 9.035 9 9.5 9s.697 0 .89.038c.794.158 1.414.778 1.572 1.572.038.193.038.425.038.89v6c0 .207 0 .368-.003.5h2.006C14 17.868 14 17.707 14 17.5v-9c0-.465 0-.697.038-.89.158-.794.778-1.414 1.572-1.572C15.803 6 16.035 6 16.5 6s.697 0 .89.038c.794.158 1.414.778 1.572 1.572.038.193.038.425.038.89v9c0 .207 0 .368-.003.5H19c1.657 0 2 .448 2 1s-.343 1-2 1H9c-2.828 0-4.243 0-5.121-.879C3 18.243 3 16.828 3 14V6c0-1.657.448-2 1-2zm12.5 14c.246 0 .38 0 .479-.004h.017v-.017C17 17.88 17 17.745 17 17.5v-9c0-.246 0-.38-.004-.478v-.018h-.017C16.88 8 16.745 8 16.5 8c-.246 0-.38 0-.479.004h-.017v.018C16 8.12 16 8.254 16 8.5v9c0 .246 0 .38.004.479v.017h.017c.099.004.233.004.479.004zm-7 0c.246 0 .38 0 .478-.004h.018v-.017C10 17.88 10 17.745 10 17.5v-6c0-.246 0-.38-.004-.478v-.018h-.018C9.88 11 9.746 11 9.5 11c-.246 0-.38 0-.478.004h-.018v.018C9 11.12 9 11.254 9 11.5v6c0 .246 0 .38.004.479v.017h.018C9.12 18 9.254 18 9.5 18z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Invest
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <div
                    class="MuiBox-root MuiBox-root-35"
                    data-testid="Spacer"
                  >
                    <div
                      class="c8"
                    />
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-controls="simple-menu"
                    aria-haspopup="true"
                    class="MuiButtonBase-root MuiButton-root MuiButton-text c9 MuiButton-disableElevation"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M6.618 16.465c3.559-.62 7.206-.62 10.765 0l.428.076c1.83.361 3.154 1.884 3.19 3.667v.097c0 .576-.695.901-1.173.549-.389-.287-.626-.709-.862-1.128-.082-.146-.163-.29-.25-.43-.281-.445-.748-.775-1.31-.886l-.382-.068c-3.322-.578-6.726-.578-10.047 0l-.382.068c-.562.111-1.029.441-1.31.886-.087.14-.169.284-.25.43-.236.42-.474.841-.862 1.128-.478.352-1.173.027-1.173-.55v-.096c.035-1.783 1.36-3.306 3.19-3.667l.428-.076zM12 3c3.314 0 6 2.686 6 6s-2.686 6-6 6-6-2.686-6-6 2.686-6 6-6zm0 2C9.79 5 8 6.79 8 9s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <span
                        class="MuiButton-endIcon MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.645 10.592c.433-.309.477-.908.093-1.27l-.08-.075c-.308-.292-.795-.33-1.15-.09l-4.536 3.71-4.48-3.71c-.355-.24-.842-.201-1.15.09l-.08.075c-.384.363-.34.961.093 1.27l5.078 4.237c.319.228.759.228 1.078 0l5.134-4.237z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-36"
        data-testid="Spacer"
      >
        <div
          class="c10"
        />
      </div>
      <div
        class="MuiToolbar-root MuiToolbar-regular c11 MuiToolbar-gutters"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <label
              class="MuiFormControlLabel-root c12 MuiFormControlLabel-labelPlacementStart"
            >
              <div
                class="MuiBox-root MuiBox-root-37"
              >
                <span
                  class="MuiSwitch-root c13 MuiSwitch-sizeSmall"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-38 MuiSwitch-switchBase MuiSwitch-colorPrimary"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        class="PrivateSwitchBase-input-41 MuiSwitch-input"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="MuiSwitch-thumb"
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiSwitch-track"
                  />
                </span>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Experimental Features
              </span>
            </label>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <a
              aria-disabled="false"
              class="MuiButtonBase-root MuiButton-root MuiButton-text c14 MuiButton-disableElevation"
              href="https://google.com"
              tabindex="0"
            >
              <span
                class="MuiButton-label"
              >
                My Accounts Login
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </a>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;

exports[`HeaderMenu in desktop view with experimental features enabled renders the header menu view with experimental features 1`] = `
.c4 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
}

.c5 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.01875rem;
  -moz-letter-spacing: 0.01875rem;
  -ms-letter-spacing: 0.01875rem;
  letter-spacing: 0.01875rem;
  font-weight: normal;
  color: #000;
  white-space: break-spaces;
}

.c21 {
  font-size: 1.0625rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0.01875rem;
  -moz-letter-spacing: 0.01875rem;
  -ms-letter-spacing: 0.01875rem;
  letter-spacing: 0.01875rem;
  font-weight: 600;
  color: inherit;
  white-space: break-spaces;
}

.c6 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
  color: #6c00bf;
  border: 1px solid #6c00bf;
  height: 40px;
  border-radius: 6px;
  min-width: 80px;
  text-transform: none;
  white-space: nowrap;
  padding: 12px 16px;
}

.c6.Mui-disabled {
  color: #6c00bf;
  border: 1px solid #6c00bf;
  opacity: 0.2;
}

.c6 .MuiButton-iconSizeMedium *:first-child {
  font-size: 0.875rem;
}

.c7 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
  background-color: #6c00bf;
  color: #fff;
  height: 40px;
  border-radius: 6px;
  min-width: 80px;
  text-transform: none;
  white-space: break-space;
  padding: 12px 16px;
}

.c7:hover {
  background-color: #6c00bf;
  color: #fff;
}

.c7.Mui-disabled {
  background-color: #6c00bf;
  color: #fff;
  opacity: 0.2;
}

.c7.Mui-disabled:hover {
  background-color: #6c00bf;
  color: #fff;
}

.c7 .MuiButton-iconSizeMedium *:first-child {
  font-size: 0.875rem;
}

.c9 {
  font-size: 0.6875rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #380c57;
  white-space: break-spaces;
  color: #6c00bf;
  height: 40px;
  border-radius: 6px;
  min-width: 40px;
  width: 40px;
  text-transform: none;
  white-space: break-space;
  padding: 8px;
}

.c9.Mui-disabled {
  color: #6c00bf;
  opacity: 0.2;
}

.c9 .MuiButton-iconSizeMedium *:first-child {
  font-size: 0.875rem;
}

.c8 {
  background-color: #eeedfc;
  width: 3px;
  height: 100%;
  border-radius: 1.5px;
}

.c10 {
  background-color: #eeedfc;
  width: 100%;
  height: 1px;
  border-radius: 1.5px;
}

.c17.MuiSwitch-root {
  width: 3.4375rem;
  height: 1.5625rem;
  position: relative;
  color: #fff;
  font-weight: bold;
  font-size: 0.75rem;
  padding: 0;
}

.c17 .MuiSwitch-switchBase.Mui-checked + .MuiSwitch-track {
  opacity: 1;
}

.c17 .MuiSwitch-switchBase {
  padding: 0.3125rem;
}

.c17 .MuiSwitch-track {
  opacity: 1;
  background-color: #fff;
  border: 2px solid #aeaabf;
  border-radius: 6.25rem;
}

.c17 .MuiSwitch-track:before,
.c17 .MuiSwitch-track:after {
  display: inline-block;
  position: absolute;
  top: 50%;
  width: 50%;
  text-align: center;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c17 .MuiSwitch-track:before {
  content: 'ON';
  opacity: 0;
  left: 0.375rem;
}

.c17 .MuiSwitch-track:after {
  content: 'OFF';
  right: 0.3125rem;
  opacity: 1;
  color: #393840;
}

.c17 .MuiSwitch-thumb {
  box-shadow: none;
  background-color: #aeaabf;
  width: 0.9375rem;
  height: 0.9375rem;
}

.c17 .Mui-checked {
  color: #fff;
}

.c17 .Mui-checked .MuiSwitch-thumb {
  background-color: #fff;
}

.c17 .Mui-checked.MuiSwitch-switchBase {
  -webkit-transform: translateX(30px);
  -ms-transform: translateX(30px);
  transform: translateX(30px);
}

.c17 .Mui-checked + .MuiSwitch-track {
  border: 0;
}

.c17 .Mui-checked + .MuiSwitch-track:before {
  opacity: 1;
}

.c17 .Mui-checked + .MuiSwitch-track:after {
  opacity: 0;
}

.c1 {
  font-size: 0.8125rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #6c00bf;
  white-space: break-spaces;
}

.c15 {
  font-size: 0.8125rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: inherit;
  white-space: break-spaces;
}

.c22 {
  font-size: 0.8125rem;
  line-height: 1rem;
  -webkit-letter-spacing: 0.0125rem;
  -moz-letter-spacing: 0.0125rem;
  -ms-letter-spacing: 0.0125rem;
  letter-spacing: 0.0125rem;
  font-weight: 600;
  color: #fff;
  white-space: break-spaces;
}

.c11 .MuiToolbar-root {
  border-top: 2px solid [object Object];
}

.c16 {
  margin: 2px;
}

.c0 {
  box-shadow: 1px 2px 44px 0 rgba(139,139,139,0.26);
}

.c12 {
  background: linear-gradient(267deg,#af61fe 20%,#7024fc 75%);
  color: white;
  padding-left: 2.25rem;
  padding-right: 2.5625rem;
}

.c14 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
}

.c19 {
  position: absolute;
  z-index: 10;
  right: 6.0625rem;
  top: 3.75rem;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c2 {
  background-image: url('/PurpleBestInvest.svg');
  background-repeat: no-repeat;
  background-size: auto;
  height: 38px;
  width: 124px;
}

.c3 {
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  white-space: nowrap;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 0.5rem;
  column-gap: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-column-gap: 0.875rem;
  column-gap: 0.875rem;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  width: 100%;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c23 {
  background-image: url(coachIcon.png);
  background-size: contain;
  width: 2.8125rem;
  height: 2.8125rem;
  border: 0;
  image-rendering: -webkit-optimize-contrast;
}

.c24 {
  position: relative;
  left: 30px;
  top: 27px;
}

@media (max-width:830px) {
  .c12 {
    padding: 0;
  }
}

@media (max-width:830px) {
  .c19 {
    right: 0;
  }
}

<div>
  <div
    class="MuiBox-root MuiBox-root-1"
    data-test-id="header-menu"
  >
    <header
      class="MuiPaper-root MuiAppBar-root MuiAppBar-positionRelative MuiAppBar-colorInherit c0 MuiPaper-elevation0"
      data-testid="header-menu"
    >
      <div
        class="MuiToolbar-root MuiToolbar-dense MuiToolbar-gutters"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-2"
            >
              <button
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover c1 MuiLink-button MuiTypography-colorPrimary"
              >
                <div
                  class="c2"
                />
              </button>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-justify-content-xs-space-between MuiGrid-grid-xs-10"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-wrap-xs-nowrap"
              />
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item MuiGrid-wrap-xs-nowrap MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6"
                >
                  <div
                    class="c3"
                  >
                    <h6
                      class="MuiTypography-root c4 MuiTypography-body1"
                    >
                      £101,100.00
                    </h6>
                    <p
                      class="MuiTypography-root c5 MuiTypography-body1"
                    >
                      cash ready to invest
                    </p>
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text c6 MuiButton-disableElevation"
                    tabindex="0"
                    type="button"
                    wrap="nowrap"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.739 6.261c.396.396.471.964-.718 2.152L13.435 12l3.586 3.587c1.19 1.188 1.114 1.756.718 2.152-.396.396-.964.471-2.152-.718L12 13.435 8.413 17.02c-1.188 1.19-1.756 1.114-2.152.718-.396-.396-.471-.964.717-2.152L10.565 12 6.978 8.413C5.79 7.225 5.865 6.657 6.261 6.261c.396-.396.964-.471 2.152.717L12 10.565l3.587-3.587c1.188-1.188 1.756-1.113 2.152-.717z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Add cash
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-text c7 MuiButton-disableElevation"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <span
                        class="MuiButton-startIcon MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M4 4c.552 0 1 .343 1 2v10c0 .943 0 1.414.293 1.707C5.586 18 6.057 18 7 18h.003C7 17.868 7 17.707 7 17.5v-6c0-.465 0-.697.038-.89.158-.794.778-1.414 1.572-1.572C8.803 9 9.035 9 9.5 9s.697 0 .89.038c.794.158 1.414.778 1.572 1.572.038.193.038.425.038.89v6c0 .207 0 .368-.003.5h2.006C14 17.868 14 17.707 14 17.5v-9c0-.465 0-.697.038-.89.158-.794.778-1.414 1.572-1.572C15.803 6 16.035 6 16.5 6s.697 0 .89.038c.794.158 1.414.778 1.572 1.572.038.193.038.425.038.89v9c0 .207 0 .368-.003.5H19c1.657 0 2 .448 2 1s-.343 1-2 1H9c-2.828 0-4.243 0-5.121-.879C3 18.243 3 16.828 3 14V6c0-1.657.448-2 1-2zm12.5 14c.246 0 .38 0 .479-.004h.017v-.017C17 17.88 17 17.745 17 17.5v-9c0-.246 0-.38-.004-.478v-.018h-.017C16.88 8 16.745 8 16.5 8c-.246 0-.38 0-.479.004h-.017v.018C16 8.12 16 8.254 16 8.5v9c0 .246 0 .38.004.479v.017h.017c.099.004.233.004.479.004zm-7 0c.246 0 .38 0 .478-.004h.018v-.017C10 17.88 10 17.745 10 17.5v-6c0-.246 0-.38-.004-.478v-.018h-.018C9.88 11 9.746 11 9.5 11c-.246 0-.38 0-.478.004h-.018v.018C9 11.12 9 11.254 9 11.5v6c0 .246 0 .38.004.479v.017h.018C9.12 18 9.254 18 9.5 18z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      Invest
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <div
                    class="MuiBox-root MuiBox-root-2"
                    data-testid="Spacer"
                  >
                    <div
                      class="c8"
                    />
                  </div>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item"
                >
                  <button
                    aria-controls="simple-menu"
                    aria-haspopup="true"
                    class="MuiButtonBase-root MuiButton-root MuiButton-text c9 MuiButton-disableElevation"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M6.618 16.465c3.559-.62 7.206-.62 10.765 0l.428.076c1.83.361 3.154 1.884 3.19 3.667v.097c0 .576-.695.901-1.173.549-.389-.287-.626-.709-.862-1.128-.082-.146-.163-.29-.25-.43-.281-.445-.748-.775-1.31-.886l-.382-.068c-3.322-.578-6.726-.578-10.047 0l-.382.068c-.562.111-1.029.441-1.31.886-.087.14-.169.284-.25.43-.236.42-.474.841-.862 1.128-.478.352-1.173.027-1.173-.55v-.096c.035-1.783 1.36-3.306 3.19-3.667l.428-.076zM12 3c3.314 0 6 2.686 6 6s-2.686 6-6 6-6-2.686-6-6 2.686-6 6-6zm0 2C9.79 5 8 6.79 8 9s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4z"
                          fill-rule="evenodd"
                        />
                      </svg>
                      <span
                        class="MuiButton-endIcon MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M17.645 10.592c.433-.309.477-.908.093-1.27l-.08-.075c-.308-.292-.795-.33-1.15-.09l-4.536 3.71-4.48-3.71c-.355-.24-.842-.201-1.15.09l-.08.075c-.384.363-.34.961.093 1.27l5.078 4.237c.319.228.759.228 1.078 0l5.134-4.237z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root MuiBox-root-3"
        data-testid="Spacer"
      >
        <div
          class="c10"
        />
      </div>
      <div
        class="MuiToolbar-root MuiToolbar-regular c11 c12 MuiToolbar-gutters"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
        >
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="c13"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root c14"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M17 9c1.389.027 2.213.15 2.826.62.208.16.395.346.554.554.59.77.619 2.323.62 4.496V15c0 2.346 0 4.018-.62 4.826-.16.208-.346.394-.554.554-.808.62-1.98.62-4.326.62h-7c-2.346 0-3.518 0-4.326-.62-.208-.16-.394-.346-.554-.554-.561-.73-.614-2.17-.62-4.174v-1.304c.006-2.004.059-3.443.62-4.174.16-.208.346-.394.554-.554C4.787 9.15 5.61 9.027 7 9c1.657 0 2 .448 2 1s-.343 1-2 1c-.412.008-.739.034-1.016.065-.255.029-.403.064-.488.093-.073.024-.097.043-.105.049-.07.053-.131.115-.184.184-.007.008-.024.032-.05.105-.028.085-.063.233-.092.488-.053.471-.063 1.455-.065 2.494v1.044c.002 1.04.012 2.023.065 2.494.029.255.064.403.093.488.025.073.043.097.049.105.053.07.115.131.184.184.008.006.032.024.105.049.085.029.233.064.488.093.55.062 1.297.065 2.516.065h7c1.22 0 1.966-.003 2.516-.065.255-.029.403-.064.488-.093.073-.024.097-.043.105-.049.07-.053.131-.115.184-.184.006-.008.024-.032.05-.105.028-.085.063-.233.092-.488.053-.471.063-1.455.065-2.494v-1.044c-.002-1.04-.012-2.023-.065-2.494-.029-.255-.064-.403-.093-.488-.024-.073-.043-.097-.049-.105-.053-.07-.115-.131-.184-.184-.008-.007-.032-.025-.105-.05-.085-.028-.233-.063-.488-.092-.277-.031-.604-.057-1.016-.065-1.657 0-2-.448-2-1s.343-1 2-1zm-5.603-5.798c.357-.27.85-.27 1.206 0l3.48 2.632c.485.366.534 1.076.105 1.505l-.089.089c-.346.346-.89.39-1.288.107L13 6.24v8.786c0 1.657-.448 2-1 2s-1-.343-1-2V6.24L9.19 7.535c-.398.284-.943.239-1.289-.107l-.089-.089c-.43-.43-.38-1.139.104-1.505z"
                  fill-rule="evenodd"
                />
              </svg>
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineAlways c15 MuiTypography-colorPrimary"
                href="https://google.com"
              >
                Back to old Bestinvest
              </a>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <label
              class="MuiFormControlLabel-root c16 MuiFormControlLabel-labelPlacementStart"
            >
              <div
                class="MuiBox-root MuiBox-root-4"
              >
                <span
                  class="MuiSwitch-root c17 MuiSwitch-sizeSmall"
                >
                  <span
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-5 MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-checked-6 Mui-checked"
                  >
                    <span
                      class="MuiIconButton-label"
                    >
                      <input
                        checked=""
                        class="PrivateSwitchBase-input-8 MuiSwitch-input"
                        type="checkbox"
                        value=""
                      />
                      <span
                        class="MuiSwitch-thumb"
                      />
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </span>
                  <span
                    class="MuiSwitch-track"
                  />
                </span>
              </div>
              <span
                class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
              >
                Experimental Features
              </span>
            </label>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item"
          >
            <div
              class="c18"
            >
              <div
                class="c19"
              />
              <div
                class="c20"
              >
                <h6
                  class="MuiTypography-root c21 MuiTypography-body1"
                >
                  YOUR COACH
                </h6>
                <button
                  class="MuiTypography-root MuiLink-root MuiLink-underlineAlways c22 MuiLink-button MuiTypography-colorPrimary"
                >
                  Book an appointment
                </button>
              </div>
              <div
                class="c23"
              >
                <div
                  class="c24"
                >
                  <svg
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <g
                      fill="none"
                      fill-rule="evenodd"
                    >
                      <g
                        transform="translate(-1384.000000, -133.000000) translate(0.000000, 90.000000) translate(1216.000000, 17.000000) translate(168.000000, 26.000000)"
                      >
                        <circle
                          cx="10"
                          cy="10"
                          fill="#eeedfc"
                          r="10"
                        />
                        <g
                          transform="scale(0.8, 0.8) translate(2.5 2.5)"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15 4.8752 C 15.1377 4.1392 15.4638 3.9611 15.8443 3.9611 C 16.2271 3.9611 16.555 4.1414 16.6911 4.8891 C 18.1517 4.9289 19.0162 5.0829 19.6115 5.6783 C 20.4147 6.4815 20.4147 7.7743 20.4147 10.3597 L 20.4147 14.9302 C 20.4147 17.5156 20.4147 18.8083 19.6115 19.6115 C 18.8083 20.4147 17.5156 20.4147 14.9302 20.4147 L 9.4456 20.4147 C 6.8602 20.4147 5.5675 20.4147 4.7643 19.6115 C 3.9611 18.8083 3.9611 17.5156 3.9611 14.9302 L 3.9611 10.3597 C 3.9611 7.7743 3.9611 6.4815 4.7643 5.6783 C 5.3597 5.0829 6.2241 4.9289 7.6847 4.8891 C 7.8208 4.1414 8.1487 3.9611 8.5315 3.9611 C 8.912 3.9611 9.2381 4.1392 9.3758 4.8752 L 15 4.8752 Z M 7.6174 6.72 C 7.6204 8.2202 8.0285 8.5315 8.5315 8.5315 C 9.0364 8.5315 9.4456 8.2179 9.4456 6.7033 L 14.9302 6.7033 C 14.9302 8.2179 15.3394 8.5315 15.8443 8.5315 C 16.3473 8.5315 16.7553 8.2202 16.7583 6.72 C 17.1306 6.7319 17.4348 6.7524 17.6956 6.7874 C 18.22 6.8579 18.3075 6.9582 18.318 6.9701 L 18.3188 6.9711 L 18.3198 6.9719 C 18.3317 6.9823 18.432 7.0699 18.5024 7.5943 C 18.5626 8.042 18.5799 8.6179 18.5847 9.4456 L 5.7911 9.4456 C 5.7959 8.6179 5.8132 8.042 5.8733 7.5943 C 5.9438 7.0699 6.0441 6.9823 6.056 6.9719 L 6.057 6.9711 L 6.0578 6.9701 C 6.0682 6.9582 6.1558 6.8579 6.6802 6.7874 C 6.941 6.7524 7.2452 6.7319 7.6174 6.72 Z M 5.7892 11.2738 L 5.7892 14.9302 C 5.7892 16.2746 5.7931 17.0989 5.8733 17.6956 C 5.9438 18.22 6.0441 18.3075 6.056 18.318 L 6.057 18.3188 L 6.0578 18.3198 C 6.0682 18.3317 6.1558 18.432 6.6802 18.5024 C 7.2768 18.5827 8.1012 18.5865 9.4456 18.5865 L 14.9302 18.5865 C 16.2746 18.5865 17.0989 18.5827 17.6956 18.5024 C 18.22 18.432 18.3075 18.3317 18.318 18.3198 L 18.3188 18.3188 L 18.3198 18.318 C 18.3317 18.3075 18.432 18.22 18.5024 17.6956 C 18.5827 17.0989 18.5865 16.2746 18.5865 14.9302 L 18.5865 11.2738 L 5.7892 11.2738 Z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </g>
                      </g>
                    </g>
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </header>
  </div>
</div>
`;
